# IVTC-DN-plugin

./: README.md  meson.build
.github/workflows/: build.yaml
src/: plugin.cpp
src/gzip/: decompress.hpp
